--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,21 +1,56 @@
-.footer {
-  padding: 20px 0;
+
+.feedback-form {
+font-family: "Montserrat", sans-serif;
+font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.04em;
+color: #2e2f42;
+text-align: left;
+
+padding: 24px;
+width: 408px;
+height: 296px;
+margin: 0 auto;
 }
-.footer-desc {
-  text-align: center;
+
+.feedback-form input {
+margin: 8px 0;
+border: 1px solid #808080;
+border-radius: 4px;
+width: 360px;
+height: 40px;
 }
-.footer-link {
-  position: relative;
+
+.feedback-form textarea {
+margin: 8px 0;
+border: 1px solid #808080;
+border-radius: 4px;
+width: 360px;
+height: 80px;
 }
-.footer-link::before {
-  content: '';
-  position: absolute;
-  bottom: 6%;
-  left: 50%;
-  transform: translateX(-50%) skewX(-12deg);
-  z-index: -1;
-  width: 110%;
-  height: 24%;
-  background-color: #41d1ff;
-  transition: 200ms ease;
+
+input:hover {
+border: 1px solid #000;
 }
+
+button {
+display: block;
+font-family: "Montserrat", sans-serif;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.04em;
+color: #fff;
+border: none;
+border-radius: 8px;
+padding: 8px 16px;
+background: #4E75FF;
+margin: 8px 0;
+}
+
+button:hover {
+  background: #6C8CFF;
+}
+
+
